--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pydantic==2.5.3
 python-dotenv==1.0.0
 
 # Data & ML
-yfinance==0.2.36
+yfinance>=0.2.50
 pandas==2.1.4
 numpy==1.26.3
 scikit-learn==1.4.0
